# calamaresos

src/: CMakeLists.txt
src/modules/mkinitcpio/: CMakeLists.txt
